# MiniProject

./: .gitignore  docker-compose.yml
.github/: chess.yml
.github/workflows/: _python-service-ci.yml  auth-ci.yml  chess-ci.yml  ci.yml  lobby-ci.yml
Auth-Service/: Makefile  README.md  pyproject.toml
Auth-Service/tests/unit/: test_method.py
auth-service/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
auth-service/alembic/: env.py
auth-service/alembic/versions/: 977cc20806bf_create_users_table.py
auth-service/src/: models.py
auth-service/src/auth/: config.py  db.py  main.py  models.py
auth-service/tests/integration/: conftest.py  test_create_user.py  test_endpoint.py  test_login.py  test_refresh.py
chess-service/: Dockerfile  Makefile  README.md  pyproject.toml
chess-service/alembic/: env.py
chess-service/src/: db.py  models.py
lobby-service/: Dockerfile  Makefile  README.md  pyproject.toml
lobby-service/alembic/: env.py
lobby-service/alembic/versions/: 5844cd2b1ea4_init_tables.py  5ea9a09a8ae3_create_game_invites_and_game_lobbies_.py
lobby-service/src/: models.py
lobby-service/src/lobby/: api_models.py  auth.py  db.py  main.py  models.py  realtime.py
lobby-service/src/lobby/routes/: routes.py  websockets.py
lobby-service/tests/integration/: conftest.py  test_endpoint.py  test_lobbies_websockets.py  test_websockets.py
lobby-service/tests/system/: test_container.py
lobby-service/tests/unit/: test_auth.py  test_config.py  test_method.py  test_realtime.py
postgres/init/: 01-create-service-dbs.sql
(+21 files in other folders)
